--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/testpkg
-	previous = 
-	base = 6f8ab55
+	previous = 6f8ab55
+	base = b5c4f59
 	trim = 
 	trimbase = 
