--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/testpkg
-	previous = 
-	base = a8a3193
+	previous = a8a3193
+	base = 40c5e36
 	trim = 
 	trimbase = 
