--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/testpkg
-	previous = 
-	base = 3e54ed2
+	previous = 3e54ed2
+	base = 1018757
 	trim = 
 	trimbase = 
