--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/testpkg
-	previous = 
-	base = 6f8ab55
+	previous = 6f8ab55
+	base = 1ebe046
 	trim = 
 	trimbase = 
