--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/testpkg
-	previous = 
-	base = ca1484d
+	previous = ca1484d
+	base = 1fa91e5
 	trim = 
 	trimbase = 
