--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/testpkg
-	previous = 
-	base = 5f4b746
+	previous = 5f4b746
+	base = 9f5111c
 	trim = 
 	trimbase = 
