--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/testpkg
-	previous = 
-	base = 37766c8
+	previous = 37766c8
+	base = 2e6bba3
 	trim = 
 	trimbase = 
