--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/testpkg
-	previous = 
-	base = 868a831
+	previous = 868a831
+	base = f8cdb30
 	trim = 
 	trimbase = 
